# vicx-applications

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: auth-server-build-docker-and-push.yml  backend-ktor-build-docker-and-push.yml  backend-python-build-docker-and-push.yml  backend-spring-boot-build-docker-and-push.yml  build-backend-python-docker-and-push.yml  build-docker-and-push.yml  build-esport-docker-and-push.yml  build-hello-world-py.yaml  build-next-app-docker-and-push.yml  build-nginx-docker-and-push.yml  build-snake-game-docker-and-push.yml  build-spring-boot-docker-and-push.yml  codeql-analysis.yml  codeql.yml  docker-build-template.yml  gradle-run-tests.yml  next-app-docker-and-push.yml  next-app-run-tests.yml
auth-server/: Dockerfile  build.gradle.kts
backend/: Dockerfile  build.gradle.kts
backend-ktor/: Dockerfile  README.md  build.gradle.kts
backend-python/: Dockerfile  README.md  pyproject.toml
backend-python/src/: app.py  kmeans_grades.py
backend-python/tests/: test_kmeans_grades.py
backend-spring-boot/: Dockerfile  build.gradle.kts
buildSrc/: build.gradle.kts
database/: build.gradle.kts
frontend/: build.gradle.kts  package-lock.json  package.json  vite.config.ts
frontend-vite/: build.gradle.kts  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
gradle/: libs.versions.toml
hello-world-py/: Dockerfile  main.py  pyproject.toml
html-pages/: Dockerfile  nginx.conf
html-pages/content/: arch.html  cs.html  esport.html  footer.html  index.html  k-means-new.html  k-means.html  microk8s.html  navbar.html  old_index.html  pen.html  python.html  setup.html  snake-game.html
kustomize/: deployment.yaml  ingress.yaml  service.yaml
next-app/: .dockerignore  Dockerfile  build.gradle.kts  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
next-app/src/: auth.ts  authOptions.ts  authProviders.ts  middleware.ts  proxy.ts  testUtils.ts
pandascore/: Dockerfile  app.js  package-lock.json  package.json
snake-game/: Dockerfile  package-lock.json  package.json  server.js
spring-boot-client/: build.gradle.kts
(+653 files in other folders)
