[tool.poetry]
name = "backend-python"
version = "0.1.0"
description = ""
authors = ["Roar Skinderviken <roar.skinderviken@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = "^0.38.0"
scikit-learn = "^1.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
