[tool.poetry]
name = "hello-goodbye-app"
version = "0.1.0"
description = "A simple Python app that logs startup and shutdown messages."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
